--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
           "src/components/cardbuilder/chaptercardbuilder.js",
           "src/components/cardbuilder/peoplecardbuilder.js",
           "src/components/dialog/dialog.js",
+          "src/components/dialogHelper/dialogHelper.js",
           "src/components/imageOptionsEditor/imageOptionsEditor.js",
           "src/components/channelMapper/channelMapper.js",
           "src/components/collectionEditor/collectionEditor.js",
