Migration confirm to ES6 modules

--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
           "src/components/cardbuilder/cardBuilder.js",
           "src/components/cardbuilder/chaptercardbuilder.js",
           "src/components/cardbuilder/peoplecardbuilder.js",
+          "src/components/confirm/confirm.js",
           "src/components/dialog/dialog.js",
           "src/components/dialogHelper/dialogHelper.js",
           "src/components/imageOptionsEditor/imageOptionsEditor.js",
