Migration directorybrowser to ES6 modules

--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
           "src/components/confirm/confirm.js",
           "src/components/dialog/dialog.js",
           "src/components/dialogHelper/dialogHelper.js",
+          "src/components/directorybrowser/directorybrowser.js",
           "src/components/imageOptionsEditor/imageOptionsEditor.js",
           "src/components/channelMapper/channelMapper.js",
           "src/components/collectionEditor/collectionEditor.js",
