Migration homeScreenSettings to ES6 modules

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
           "src/components/dialogHelper/dialogHelper.js",
           "src/components/directorybrowser/directorybrowser.js",
           "src/components/displaySettings/displaySettings.js",
+          "src/components/homeScreenSettings/homeScreenSettings.js",
           "src/components/imageOptionsEditor/imageOptionsEditor.js",
           "src/components/channelMapper/channelMapper.js",
           "src/components/collectionEditor/collectionEditor.js",
