--- a/package.json
+++ b/package.json
@@ -134,6 +134,8 @@
           "src/components/playmenu.js",
           "src/components/sanatizefilename.js",
           "src/components/scrollManager.js",
+          "src/components/subtitlesettings/subtitleappearancehelper.js",
+          "src/components/subtitlesettings/subtitlesettings.js",
           "src/components/syncPlay/groupSelectionMenu.js",
           "src/components/syncPlay/playbackPermissionManager.js",
           "src/components/syncPlay/syncPlayManager.js",
